tests/negative/gold/abstract9_test.gold
tests/negative/abstract9_test.toit:11:7: error: Non-abstract class 'C' is missing implementations
class C extends B:
      ^
tests/negative/abstract9_test.toit:5:12: note: Missing implementation for 'bar'
  abstract bar
           ^~~
Compilation failed.
